--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>7.6.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>7.9.0</version>
+        </dependency>
+
 
 
 
